# pyspark-mastery

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data_types.py  data_types__exercises.py  pyproject.toml  requirements.txt
ch02_first_data_program/: exercises_no_peaking.py
ch03_submiting_and_scaling/: exercises-existing.py  exercises.py  writing_data.py
ch04/: exercises.py
ch05/: exercises.py
ch06_json_data/: exercises.py
ch07_sql/: download_backblaze_data.py  exercises.py
ch08_rdds/: exercises.py
ch09_udf_agg_apply/: exercises.py
ch10_window_functions/: exercises.py
ch11_faster_pyspark/: exercises.py
data/: ex_06_1.json  sample.csv
