[tool.poetry]
name = "data-science-repo-template-v2"
version = "0.1.0"
description = ""
authors = ["tom-burdge <tomburdge@wessexinsights.com>"]
readme = "README.md"
packages = [{include = "data_science_repo_template_v2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
jupyter = "^1.0.0"
wget = "^3.2"
ipython = "^8.18.1"
ipykernel = "^6.27.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.1.7"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
nbqa = "^1.7.0"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
